<resources>
    <string name="app_name">AdacaLite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Unknown</string>
    <string name="nav_header_subtitle">unknown</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_setting_list">Settings</string>
    <string name="title_setting_detail">Setting Detail</string>
    <string name="info_rights">Copyright</string>
    <string name="about_adaca">About ADACA</string>
    <string name="model_number">Model</string>
    <string name="app_version">App version</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_about">About</string>
    <string name="servlet_address">Servlet address</string>
    <string name="servlet_address_detail">Please refer to the service of the servelet URL</string>
    <string name="servlet_address_default" translatable="false">http://localhost:8080/Jogos-Adaca/Jogos/login</string>
    <string name="url_path_default" translatable="false">Jogos-Adaca/Jogos/login</string>
    <string name="url_protocol_title">Protocol type</string>
    <string name="url_host_default" translatable="false">localhost</string>
    <string name="url_host_title" translatable="false">Host</string>
    <string name="url_port_default" translatable="false">8080</string>
    <string name="url_port_title">Port</string>
    <string name="no_permission_read_contacts_alert">Contacts permission is required</string>
    <string name="alert">Alert</string>
    <string name="url_href_title" translatable="false">Servlet</string>
    <string name="logotipo_adaca">Logo ADACA</string>
    <string name="no_connectivity_service">"Error checking connection. Check if exits data connecion. "</string>
    <string name="low_connection">Waiting for connecion.</string>
    <string name="action_reload">Reload</string>
    <string name="permission_denied">Permissions denied</string>
    <string name="msg_request_permission">To use the app it is necessary to accept the permissions.</string>
    <string name="accept">Accept</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="panel">Panel</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="session">Session</string>
    <string name="exit">Exit</string>
    <string name="choose_child">Choose Child</string>
    <string name="children_s_registration">Children\'s registration</string>
</resources>
