<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/servlet_address">

        <Preference
            android:title="@string/url_href_title"
            android:key="adaca.servlet.address"
            android:defaultValue="@string/servlet_address"/>
        <ListPreference
            android:key="url.protocol"
            android:title="@string/url_protocol_title"
            android:defaultValue="http://"
            android:entries="@array/pref.protocol.titles"
            android:entryValues="@array/pref.protocol.values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
        />
        <EditTextPreference
            android:key="url.host"
            android:title="@string/url_host_title"
            android:defaultValue="@string/url_host_default"
            android:selectAllOnFocus="true"
            android:inputType="textAutoComplete"
            android:singleLine="true"
            />
        <EditTextPreference
                android:key="url.port"
                android:title="@string/url_port_title"
                android:defaultValue="@string/url_port_default"
                android:selectAllOnFocus="true"
                android:inputType="numberDecimal"
                android:singleLine="true"
        />
        <EditTextPreference
                android:key="url.path"
                android:defaultValue="@string/url_path_default"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/servlet_address_detail"
        />
    </PreferenceCategory>

</PreferenceScreen>
